-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.12.3
-
None
-
-
a4bd4565ccd351f979507f1af3d90c61845c532c (qt/qtbase/5.12)
On Mac, adding a QWidgetAction to the main menu during the processing of an aboutToShow() signal, cause the widget to not show up properly when using the native menu bar. The rendering is correct the second time the menu is shown.
Attached is a project to test the issue. It is present in Qt 5.13.
A patch which solves the problem is proposed here:
https://codereview.qt-project.org/#/c/261704/
The two screenshots show the result before and after the patch is applied. The problem does not affect the menu bar if the native option is turned off.
For Gerrit Dashboard: QTBUG-75826 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
261704,5 | Emit QMenu::aboutToShow() before platform specific code | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |